# kaggle-competition-predicting-student-health

./: .gitignore  README.md  main.py  pyproject.toml  train_layer_one.py  train_layer_one2.py  train_layer_one3.py  train_layer_one4.py  train_layer_two.py
julia_scripts/: Manifest.toml  Project.toml  feature_selection.jl
notebooks/: 1.0_exploratory_data_analysis.ipynb  2.0_feature_engineering.ipynb  2.1_feature_engineering.ipynb  3.0_machine_learning.ipynb  4.0_stacking_data_layer_one.ipynb  4.1_stacking_data_layer_one_data_type_raw.ipynb  4.2_stacking_data_layer_one_data_type_feat_eng.ipynb  4.3_stacking_data_layer_one_data_type_raw_encoding.ipynb  4.4_stacking_data_layer_one_data_type_feat_eng_encoding.ipynb  5.0.0_xgboost_submission.ipynb  5.0.1_xgboost_submission.ipynb  5.0.2_xgboost_submission.ipynb  5.0_xgboost_submission.ipynb  5.1.0_lightgbm_submission.ipynb  5.1.1_lightgbm_submission.ipynb  5.1_xgboost_submission.ipynb  5.2.0_catboost_submission.ipynb  5.2.1_catboost_submission.ipynb  5.2_xgboost_submission.ipynb  5.3.0_xgboost_lightgbm_catboost_submission.ipynb  5.3_stacking_submission.ipynb  5.3_xgboost_submission.ipynb  5.4.0_xgboost_lightgbm_catboost_stacking_submission.ipynb  5.4.1_xgboost_lightgbm_catboost_stacking_submission.ipynb  5.4.2_xgboost_lightgbm_catboost_stacking_submission.ipynb  6.0_lightgbm_submission.ipynb
src/layer_one/: catboost_tuning.py  config.py  lightgbm_tuning.py  xgboost_tuning.py
src/layer_one/utils/: dump_model.py
src/layer_two/: __init__.py  catboost_tuning.py  config.py
src/layer_two/utils/: __init__.py  logging_setup.py
