[project]
name = "kaggle-competition-predicting-student-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "category-encoders>=2.9.0",
    "fastparquet>=2026.5.0",
    "jupyterlab>=4.6.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
    "xgboost>=3.3.0",
]
